FrontEnd/styles/layout.scss
// Copyright Dave Verwer, Sven A. Schmidt, and other contributors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// -------------------------------------------------------------------------
// Site layout and containers.
// -------------------------------------------------------------------------

.inner {
    max-width: 850px;
    margin: 0 auto;
}

main > .inner {
    padding: 20px 10px;
}

.two-column {
    display: grid;
    overflow: hidden;
    grid-template-columns: minmax(0, 3fr) minmax(0, 1fr);
    gap: 60px;
    min-width: 0;

    > :last-child {
        justify-self: end;
        min-width: 0;
    }

    &.even {
        grid-template-columns: 1fr 1fr;
    }

    &.v-center {
        align-items: center;
    }

    &.v-end {
        align-items: end;
    }
}

.center-column {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 700px;
    margin: 0 auto;
}

@media screen and (max-width: $mobile-breakpoint) {
    .two-column {
        display: flex;
        flex-direction: column;
        gap: 10px;
        width: 100%;

        > * {
            width: 100%;
        }

        &.mobile-reversed {
            flex-direction: column-reverse;
        }
    }
}

// Staging banner.

.staging {
    padding: 10px;
    font-weight: 600;
    text-align: center;
    color: var(--white);
    background-color: var(--mid-red);

    a {
        text-decoration: underline;
        color: var(--white);

        &:hover {
            color: var(--header-link-highlight);
        }
    }
}

